Fix(demo): Fix sticky footer in demo, unify layouts and fix ScrollView page overflow

--- a/packages/demo/scss/index.scss
+++ b/packages/demo/scss/index.scss
@@ -1,14 +1,16 @@
 // 1. Expand the page to fill the viewport height to be ready for various themes.
 // 2. Make the footer sticky.
+// 3. Absolutely positioned elements are taken out of the grid flow, so the first `auto` is the header,
+//    the last `auto` is the footer, and the middle `1fr` is the main.
 
 html {
     height: 100%; // 1.
 }
 
 body {
-    min-height: 100%; // 1.
     display: grid; // 2.
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-rows: auto 1fr auto; // 2., 3.
+    min-height: 100%; // 1.
 }
 
 :root,
